# FamilyExpenseManag--

./: CMakeLists.txt  main.c
include/: common.h  data_structures.h  file_operations.h  list_operations.h  query_functions.h  sort_functions.h  statistic_functions.h  ui_functions.h
src/: common.c  data_structures.c  file_operations.c  list_operations.c  query_functions.c  sort_functions.c  statistic_functions.c  ui_functions.c
